feat(baseUrl):添加环境变量

--- a/template/index.html
+++ b/template/index.html
@@ -6,6 +6,7 @@
     <title>{{ name }}</title>
   </head>
   <body>
+    <script src=<%=htmlWebpackPlugin.options.path %>conf.js></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
